Filter adding session again for getFile; minor improvs